Añado sección de equipo - Pablito

--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
                         <h2>Bienvenidos a nuestro proyecto</h2>
                         <section>Este es un proyecto colaborativo para aprender Git y GitHub.</section>p>
                     </section>
+                    <section id="equipo">
+                        <h2>Nuestro Equipo</h2>
+                        <div class="miembro">
+                            <h3>Pablo 'Pablove1992' Sánchez</h3>
+                            <p>Hago directos en Youtube y Twitch y videojuegos en clase con js y css</p>
+                        </div>
+                    </section>
                 </main>
                 <script src="js/script.js"></script>
             </body>
