La vida puede ser maravillosa

--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
                             <h3>Pablo 'Pablove1992' Sánchez</h3>
                             <p>Hago directos en Youtube y Twitch y videojuegos en clase con js y css</p>
                         </div>
+                        <div class="miembro">
+                            <h3>Rafael Vaquero Benito</h3>
+                            <p>Hago directos en Youtube y Twitch y podcaster</p>
+                        </div>
                     </section>
                 </main>
                 <script src="js/script.js"></script>
