--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
                             <h3>Rafael Vaquero Benito</h3>
                             <p>Hago directos en Youtube y Twitch y podcaster</p>
                         </div>
+                         <div class="miembro">
+                            <h3>Wildeyver Valdez</h3>
+                            <p>me gusta jugar y ver anime y ayudar a los demas</p>
+                        </div>
                     </section>
                 </main>
                 <script src="js/script.js"></script>
