he hecho lo que me han pedido

--- a/index.html
+++ b/index.html
@@ -38,7 +38,11 @@
                         </div>
                          <div class="miembro">
                             <h3>Wildeyver Valdez</h3>
-                            <p>me gusta jugar y ver anime y ayudar a los demas</p>
+                            <p>Me gusta jugar y ver anime y ayudar a los demas</p>
+                        </div>
+                        <div class="miembro">
+                            <h3>Álvaro Yepes</h3>
+                            <p>Me gusta ser ayudado por Wildeyver Valdez</p>
                         </div>
                     </section>
                 </main>
