Añado sección de equipo - Laura

--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
                             <h3>Álvaro Yepes</h3>
                             <p>Me gusta ser ayudado por Wildeyver Valdez</p>
                         </div>
+                        <div class="miembro">
+                            <h3>Laura Blanco</h3>
+                            <p>Me gusta hacer directos en twitch y en youtube</p>
+                        </div>
                     </section>
                 </main>
                 <script src="js/script.js"></script>
