--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                             <h3>Rafael Vaquero Benito</h3>
                             <p>Hago directos en Youtube y Twitch y podcaster</p>
                         </div>
-                         <div class="miembro">
+                        <div class="miembro">
                             <h3>Wildeyver Valdez</h3>
                             <p>Me gusta jugar y ver anime y ayudar a los demas</p>
                         </div>
@@ -47,6 +47,10 @@
                         <div class="miembro">
                             <h3>Laura Blanco</h3>
                             <p>Me gusta hacer directos en twitch y en youtube</p>
+                        </div>
+                        <div class="miembro">
+                            <h3>Valentina Zabala</h3>
+                            <p>Me gusta ver ser series</p>
                         </div>
                     </section>
                 </main>
