Añado formulario de contacto

--- a/index.html
+++ b/index.html
@@ -53,6 +53,14 @@
                             <p>Me gusta ver ser series</p>
                         </div>
                     </section>
+                    <section id="contacto">
+                        <h2>Contacto</h2>
+                        <form>
+                            <input type="email" placeholder="Tu email" required>
+                            <textarea placeholder="Tu mensaje" required></textarea>
+                            <button type="submit">Enviar</button>
+                        </form>
+                    </section>
                 </main>
                 <script src="js/script.js"></script>
             </body>
