Añadido contador de colaboradores

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                     </section>
                     <section id="contacto">
                         <h2>Contacto</h2>
+                        <p>Colaboradores: <span id="collaborators">0</span></p>
                         <form>
                             <input type="email" placeholder="Tu email" required>
                             <textarea placeholder="Tu mensaje" required></textarea>
