--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
             <body>
                 <header>
-                    <h1>Desarrollo Web— IFCD0110</h1>>
+                    <h1>Proyecto Web Colaborativo — IFCD0110</h1>
 
                     <nav>
                         <ul>
