Cambios locos corregidos

--- a/index.html
+++ b/index.html
@@ -4,65 +4,65 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Proyecto Colaborativo Git<title>
-            <link rel="stylesheet" href="css/style.css">
+    <title>Proyecto Colaborativo Git</title>
+    <link rel="stylesheet" href="css/style.css">
 
-            <head>
+</head>
 
-            <body>
-                <header>
-                    <h1>Proyecto Web Colaborativo</h1>>
+<body>
+    <header>
+        <h1>Proyecto Web Colaborativo</h1>>
 
-                    <nav>
-                        <ul>
-                            <li><a href="#inicio">Inicio</a></li>
-                            <li><a href="#equipo">Equipo</a></li>
-                            <li><a href="#contacto">Contacto</a></li>
-                        </ul>
-                    </nav>
-                </header>
-                <main>
-                    <section id="inicio">
-                        <h2>Bienvenidos a nuestro proyecto</h2>
-                        <section>Este es un proyecto colaborativo para aprender Git y GitHub.</section>p>
-                    </section>
-                    <section id="equipo">
-                        <h2>Nuestro Equipo</h2>
-                        <div class="miembro">
-                            <h3>Pablo 'Pablove1992' Sánchez</h3>
-                            <p>Hago directos en Youtube y Twitch y videojuegos en clase con js y css</p>
-                        </div>
-                        <div class="miembro">
-                            <h3>Rafael Vaquero Benito</h3>
-                            <p>Hago directos en Youtube y Twitch y podcaster</p>
-                        </div>
-                        <div class="miembro">
-                            <h3>Wildeyver Valdez</h3>
-                            <p>Me gusta jugar y ver anime y ayudar a los demas</p>
-                        </div>
-                        <div class="miembro">
-                            <h3>Álvaro Yepes</h3>
-                            <p>Me gusta ser ayudado por Wildeyver Valdez</p>
-                        </div>
-                        <div class="miembro">
-                            <h3>Laura Blanco</h3>
-                            <p>Me gusta hacer directos en twitch y en youtube</p>
-                        </div>
-                        <div class="miembro">
-                            <h3>Valentina Zabala</h3>
-                            <p>Me gusta ver ser series</p>
-                        </div>
-                    </section>
-                    <section id="contacto">
-                        <h2>Contacto</h2>
-                        <form>
-                            <input type="email" placeholder="Tu email" required>
-                            <textarea placeholder="Tu mensaje" required></textarea>
-                            <button type="submit">Enviar</button>
-                        </form>
-                    </section>
-                </main>
-                <script src="js/script.js"></script>
-            </body>
+        <nav>
+            <ul>
+                <li><a href="#inicio">Inicio</a></li>
+                <li><a href="#equipo">Equipo</a></li>
+                <li><a href="#contacto">Contacto</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section id="inicio">
+            <h2>Bienvenidos a nuestro proyecto</h2>
+            <section>Este es un proyecto colaborativo para aprender Git y GitHub.</section>
+        </section>
+        <section id="equipo">
+            <h2>Nuestro Equipo</h2>
+            <div class="miembro">
+                <h3>Pablo 'Pablove1992' Sánchez</h3>
+                <p>Hago directos en Youtube y Twitch y videojuegos en clase con js y css</p>
+            </div>
+            <div class="miembro">
+                <h3>Rafael Vaquero Benito</h3>
+                <p>Hago directos en Youtube y Twitch y podcaster</p>
+            </div>
+            <div class="miembro">
+                <h3>Wildeyver Valdez</h3>
+                <p>Me gusta jugar y ver anime y ayudar a los demas</p>
+            </div>
+            <div class="miembro">
+                <h3>Álvaro Yepes</h3>
+                <p>Me gusta ser ayudado por Wildeyver Valdez</p>
+            </div>
+            <div class="miembro">
+                <h3>Laura Blanco</h3>
+                <p>Me gusta hacer directos en twitch y en youtube</p>
+            </div>
+            <div class="miembro">
+                <h3>Valentina Zabala</h3>
+                <p>Me gusta ver ser series</p>
+            </div>
+        </section>
+        <section id="contacto">
+            <h2>Contacto</h2>
+            <form>
+                <input type="email" placeholder="Tu email" required>
+                <textarea placeholder="Tu mensaje" required></textarea>
+                <button type="submit">Enviar</button>
+            </form>
+        </section>
+    </main>
+    <script src="js/script.js"></script>
+</body>
 
 </html>
