--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <h1>Proyecto Web Colaborativo</h1>>
+        <h1>Proyecto Web Colaborativo</h1>
 
         <nav>
             <ul>
