Cambio del header y descripciones

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
     <header>
         <h1>Proyecto Web Colaborativo</h1>
+        <img src="media/images/unicornioTecleando.png" alt="Es un unicornio tecleando en un ordenador">
 
         <nav>
             <ul>
@@ -29,12 +30,12 @@
         <section id="equipo">
             <h2>Nuestro Equipo</h2>
             <div class="miembro">
-                <h3>Pablo 'Pablove1992' Sánchez</h3>
+                <h3>Pablo <strong>'Pablove1992'</strong> Sánchez</h3>
                 <p>Hago directos en Youtube y Twitch y videojuegos en clase con js y css</p>
             </div>
             <div class="miembro">
                 <h3>Rafael Vaquero Benito</h3>
-                <p>Hago directos en Youtube y Twitch y podcaster</p>
+                <p>Pensador y podcaster</p>
             </div>
             <div class="miembro">
                 <h3>Wildeyver Valdez</h3>
@@ -46,7 +47,7 @@
             </div>
             <div class="miembro">
                 <h3>Laura Blanco</h3>
-                <p>Me gusta hacer directos en twitch y en youtube</p>
+                <p>Me gusta hacer directos en twitch y en youtube, mi nick es Laulove2001</p>
             </div>
             <div class="miembro">
                 <h3>Valentina Zabala</h3>
@@ -54,12 +55,8 @@
             </div>
         </section>
         <section id="contacto">
-            <h2>Contacto</h2>
-            <form>
-                <input type="email" placeholder="Tu email" required>
-                <textarea placeholder="Tu mensaje" required></textarea>
-                <button type="submit">Enviar</button>
-            </form>
+            <p>Somos alumnos que estamos prácticando a publicar webs y de forma colaborativa</p>
+            <p>Gracias por vuestra colaboración, prometemos mejorar.</p>
         </section>
     </main>
     <script src="js/script.js"></script>
