Cambios de lista realizados

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </div>
             <div class="miembro">
                 <h3>Valentina Zabala</h3>
-                <p>Me gusta ver ser series</p>
+                <p>Me gusta ver series y escuchar música</p>
             </div>
         </section>
         <section id="contacto">
