--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
                             <h3>Valentina Zabala</h3>
                             <p>Me gusta ver ser series</p>
                         </div>
+                         <div class="miembro">
+                            <h3>Julio Bellido</h3>
+                            <p>Apasionado por la tecnology</p>
+                        </div>
                     </section>
                     <section id="contacto">
                         <h2>Contacto</h2>
