Cambios deploy pre-merge-main

--- a/index.html
+++ b/index.html
@@ -5,27 +5,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyecto Colaborativo Git</title>
+    <meta name="description" content="Es un proyecto web colaborativo para prácticar en clase">
     <link rel="stylesheet" href="css/style.css">
 
 </head>
 
 <body>
     <header>
-        <h1>Proyecto Web Colaborativo</h1>
-        <img src="media/images/unicornioTecleando.png" alt="Es un unicornio tecleando en un ordenador">
+        <h1>Proyecto Web Colaborativo — IFCD0110</h1>
+        <img id="bienvenido-izquierda" src="media/images/Bienvenido.png" alt="Bienvenido en diferentes idiomas">
+        <img id="corazonIzquierda" src="media/images/corazones.png" alt="corazones" height="20">
+        <img id="unicornioArma" src="media/images/unicornioArma.png" alt="Es un unicornio tecleando en un ordenador">
+        <img id="corazonDerecha" src="media/images/corazones.png" alt="corazones">
+        <img id="bienvenido-derecha" src="media/images/Bienvenido.png" alt="Bienvenido en diferentes idiomas">
 
         <nav>
             <ul>
                 <li><a href="#inicio">Inicio</a></li>
                 <li><a href="#equipo">Equipo</a></li>
-                <li><a href="#contacto">Contacto</a></li>
+                <!--<li><a href="#contacto">Sobre nosotros</a></li>-->
             </ul>
         </nav>
     </header>
     <main>
         <section id="inicio">
             <h2>Bienvenidos a nuestro proyecto</h2>
-            <section>Este es un proyecto colaborativo para aprender Git y GitHub.</section>
+
+            <p>Este es un proyecto colaborativo para aprender Git y GitHub.</p>
+            <p>Somos alumnos que estamos prácticando a publicar webs y de forma colaborativa</p>
+            <p>Gracias por vuestra colaboración, prometemos mejorar.</p>
+
         </section>
         <section id="equipo">
             <h2>Nuestro Equipo</h2>
@@ -54,11 +63,13 @@
                 <p>Me gusta ver series y escuchar música</p>
             </div>
         </section>
-        <section id="contacto">
-            <p>Somos alumnos que estamos prácticando a publicar webs y de forma colaborativa</p>
-            <p>Gracias por vuestra colaboración, prometemos mejorar.</p>
-        </section>
+        <!--<section id="contacto">
+
+        </section>-->
     </main>
+    <footer style="text-align: center; align-items: center;">
+        <p>&copy;<u>Ricardo</u>, Pablo'Pablove1992'Sánchez, Rafael Vaquero Benito, Wildeyver Valdez, Álvaro Yepes, Laura Blanco, Valentina Zabala(Alumnos de la formación-IFCD011)-2025.</p>
+    </footer>
     <script src="js/script.js"></script>
 </body>
 
