--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 <body>
     <header>
         <h1>Proyecto Web Colaborativo — IFCD0110</h1>
-        <img id="bienvenido-izquierda" src="media/images/Bienvenido.png" alt="Bienvenido en diferentes idiomas">
-        <img id="corazonIzquierda" src="media/images/corazones.png" alt="corazones" height="20">
-        <img id="unicornioArma" src="media/images/unicornioArma.png" alt="Es un unicornio tecleando en un ordenador">
-        <img id="corazonDerecha" src="media/images/corazones.png" alt="corazones">
-        <img id="bienvenido-derecha" src="media/images/Bienvenido.png" alt="Bienvenido en diferentes idiomas">
+        <img id="bienvenido-izquierda" src="media/images/Bienvenido.avif" alt="Bienvenido en diferentes idiomas">
+        <img id="corazonIzquierda" src="media/images/corazones.avif" alt="corazones" height="20">
+        <img id="unicornioArma" src="media/images/unicornioArma.avif" alt="Es un unicornio tecleando en un ordenador">
+        <img id="corazonDerecha" src="media/images/corazones.avif" alt="corazones">
+        <img id="bienvenido-derecha" src="media/images/Bienvenido.avif" alt="Bienvenido en diferentes idiomas">
 
         <nav>
             <ul>
