--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyecto Colaborativo Git</title>
     <meta name="description" content="Es un proyecto web colaborativo para prácticar en clase">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
 
 </head>
@@ -27,12 +29,12 @@
             </ul>
         </nav>
     </header>
-    <main>
+    <main class="container-fluid">
         <section id="inicio">
             <h2>Bienvenidos a nuestro proyecto</h2>
 
             <p>Este es un proyecto colaborativo para aprender Git y GitHub.</p>
-            <p>Somos alumnos que estamos prácticando a publicar webs y de forma colaborativa</p>
+            <p>Somos alumnos que estamos prácticando a publicar webs de forma colaborativa</p>
             <p>Gracias por vuestra colaboración, prometemos mejorar.</p>
 
         </section>
@@ -76,6 +78,9 @@
             Yepes, Laura Blanco, Valentina Zabala(Alumnos de la formación-IFCD011)-2025.</p>
     </footer>
     <script src="js/script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
