Añadido enlace a mi página web

--- a/index.html
+++ b/index.html
@@ -71,9 +71,11 @@
             </div>
             
             <div class="miembro">
+                <img src="media/images/LogoLaulove2001.avif" alt="Laulove2001" class="foto-miembro" height="180">
                 <div class="info-miembro">
                     <h3>Laura Blanco</h3>
-                    <p>Me gusta hacer directos en twitch y en youtube, mi nick es Laulove2001</p>
+                    <p>Me gusta programar páginas web y hacer directos en twitch y en youtube, mi nick es Laulove2001, les invito a que pulsen el botón de abajo si quieren saber más de mí</p>
+                    <a href="https://laulove200101.github.io/Laulove2001" class="btn" target="_blank">Mi sitio web</a>
                 </div>
             </div>
             
