enlace de pagina añadida

--- a/index.html
+++ b/index.html
@@ -80,9 +80,11 @@
             </div>
             
             <div class="miembro">
+                <img src="media/images/valentina.png" alt="Valentina Zabala" class="foto-miembro" height="180">
                 <div class="info-miembro">
                     <h3>Valentina Zabala</h3>
                     <p>Me gusta ver series y escuchar música</p>
+                    <a href="https://mispelisval.netlify.app/" class="btn" target="_blank">Mi sitio web</a>
                 </div>
             </div>
             
