Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         </div>
                          <div class="miembro">
                             <h3>Julio Bellido</h3>
-                            <p>Apasionado por la tecnology</p>
+                            <p>Apasionado por la technology support in computer hardware and software, programador de paginas web. </p>
                         </div>
                     </section>
                     <section id="contacto">
